# TaskDemos

./: FILES  README.md
demo_1/: README.md  demo_1.pro
demo_1/GuiPlugin/: GuiPlugin.pro  guicalc.h  mainwindow.cpp  mainwindow.h
demo_1/calculator/: calculator.pro  cmdcalc.cpp  cmdcalc.h
demo_10/: README.md  demo_10.pro  main.cpp  sharedtest.h
demo_11/: CMakeLists.txt  main.cpp
demo_11/.cache/clangd/index/: MyString.cpp.3E148DF45B3EC84A.idx  MyString.h.29103DD216B5A75B.idx  kmp.cpp.4EA47F13693DC571.idx  kmp.h.9D28E5EF0D2FA414.idx  main.cpp.AE565A0E2E927687.idx
demo_11/src/: MyString.cpp  MyString.h  kmp.cpp  kmp.h
demo_11/tests/: CMakeLists.txt  main.cpp  ut-mystring.cpp
demo_12/: CMakeLists.txt
demo_12/Client/: CMakeLists.txt
demo_12/Client/src/: CMakeLists.txt
demo_12/Client/src/dbus/: deviceinterface.cpp  deviceinterface.h
demo_12/Server/: CMakeLists.txt  main.cpp
demo_12/Server/include/: provideservice.h
demo_12/Server/src/: provideservice.cpp  provideservice_p.h
demo_2/: CMakeLists.txt  README.md
demo_2/GuiPlugin/: CMakeLists.txt  guicalc.cpp  roundbutton.cpp  roundbutton.h
demo_2/src/: cmdcalc.cpp  guicalcinterface.h  main.cpp
demo_2/tests/: CMakeLists.txt
demo_3/: CMakeLists.txt  README.md  main.cpp  run
demo_3/MyMath/: CMakeLists.txt  mymath.cpp  mymath.h
demo_4/: demo_4.pro  detailwindow.cpp  detailwindow.h  greentea.cpp  greentea.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  productwidget.cpp  productwidget.h  pudding.cpp  pudding.h  redbean.cpp  redbean.h  redtea.cpp  redtea.h  tea.h  teadecorator.h
demo_4_2/: CMakeLists.txt  main.cpp
demo_4_2/include/: baseitem.h  model.h  student.h
demo_4_2/src/: model.cpp  student.cpp
demo_5_client/: demo_5_client.pro  itemdata.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.ui  tempdelegate.cpp  tempdelegate.h
demo_6/: README.md  demo_6.pro  findedit.cpp  findedit.h  images.qrc  itemwidget.cpp  itemwidget.h  main.cpp  tempwidget.cpp  tempwidget.h
demo_7/: README.md  addappdialog.cpp  addappdialog.h  addappdialog.ui  demo_7.pro  icons.qrc  itemdata.h  itemdelegate.cpp  itemdelegate.h  widget.cpp  widget.h
demo_8/: README.md  demo_8.pro  main.cpp  primetask.cpp  primetask.h  widget.cpp  widget.h  widget.ui  worker.h  workthread.cpp  workthread.h
demo_total/MyTask_Client/: MyTask_Client.pro
demo_total/MyTask_Client/MainWindow/: MainWindow.pro  circlewidget.cpp  circlewidget.h  dbusinterfaceadapter.cpp  dbusinterfaceadapter.h  factorialwidget.cpp  factorialwidget.h  images.qrc  incwidget.cpp  incwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mybutton.cpp  mybutton.h  mylistview.cpp  mylistview.h  mylistviewitem.cpp  mylistviewitem.h  myqgsettings.cpp  myqgsettings.h  primewidget.cpp  primewidget.h  widget.cpp  widget.h  widget.ui
demo_total/MyTask_Server/: CMakeLists.txt
demo_total/MyTask_Server/src/: calcadd.cpp  calcadd.h  calcfactorial.cpp  calcfactorial.h  calcstrategy.h  functions.cpp  functions.h  main.cpp  mydbusadapter.cpp  mydbusadapter.h
demo_total/Task-2.0/: CalculateServer.7z
demo_total/Task-2.0/CalculateServer/: CMakeLists.txt
demo_total/Task-2.0/CalculateServer/src/: calculatesys.cpp  calculatesys.h  main.cpp  wininterface.h
demo_total/Task-2.0/CalculateServer/src/dbusservices/: dbuscalculateservices.cpp  dbuscalculateservices.h
demo_total/Task-2.0/CalculateServer/src/global_util/: addcalcsub.cpp  addcalcsub.h  calcbase.cpp  calcbase.h  primecalcsub.cpp  primecalcsub.h
demo_total/Task-2.0/CalculateServer/src/widgets/: testwidget.cpp  testwidget.h
demo_total/Task-2.0/CalculateServer/src/worker/: controller.cpp  controller.h  primeworker.cpp  primeworker.h
yuan_api/: main.cpp  testwidget.h  testwidget.ui  ylistview.cpp  ylistview.h  ytabelmodel.cpp  ytabelmodel.h  yuan_api.pro
